Dopesheet: Avoid deselect-all triggering on every box-select

This wouldn't only behave glitchy, but break certain copy-paste
workflows. See T70457 for details.

Addresses T70457